# ai

./: .gitignore  README.md  profiling_results.prof  requirements.txt  test.html  test.ipynb  test.py  test1.html
backend/: list.md
backend/apis/: main.py  main2.py  soc2.py  test_main.py
backend/apis/anpr/: add_missing_data.py  fetch.py  licese_numbers.csv  new.py  plate.py  recognized.csv  save_to.py  test.csv  test.ipynb  test.py  util.py  vehicle.csv  visualize.py
backend/apis/ccapi/: db_mysql.py  db_sql.py  func.py  main.py  s_j.html  test.html  test.py  test1.html  test_025.py  testgpu.py
backend/apis/db/: cam.py  dvr.py  (+5 more)
backend/stream/: DB_rectified.py  __init__.py  auto_data.py  bothfinal.py  check_data_entry.py  classification_keypoint.py  color_detection.c  color_detection.py  color_detection.pyx  config.ini  create_dataset.py  custom_inference.py  db.py  detection_keypoint.py  engine_setup.py  fff.py  finalpark.py  function.py  functions.py  main.py  module.py  module.pyx  multi_inference.py  pytorch2torch_model.py  s1.py  s2.py  setup.py  static.py  test.csv  test.ipynb  test.py  test2.py  test_main.c  test_main.py  test_main.pyx  threadingforfunctions.py  threads.py  violations.py  vvv.py  wrong_way.py  (+1 more)
backend/stream/ai_cam_c/: CMakeLists.txt  main.cpp
color-detection-vehicles-labelling/: color-det-local.ipynb  color-rto-api.ipynb  labeled_directories.json  labeling.py  test.py
final-year-project/: prediction_wo_gui.py  test.ipynb
flipkart/: ocr.py  reuirements.txt  test.html  test.json  test.py  test2.py
mediamtx_v1.8.2_windows_amd64/: mediamtx.yml
pipeline/: data_to_vm.py  requirements.txt  train.py  visualize_dataset.py
pose-estimation/lightweight-human-pose-estimation.pytorch/: demo.py
rajkaj/: login.py  main.py  main2.py  random.py  requirements.txt  test.ipynb
survey/: app.py  coordinates_with_timestamp.txt  data.json  db.py  geolocation_api.py  main.html  output.txt  process.ipynb  temp_database.json  temp_database_test.json  test.html  test.ipynb  test.txt  upload_page.py
survey/static/: index.js
survey/templates/: home.html  index.html  logs.html  update.html  upload.html
test/: get_coords.py  login.py  main.py  main3.py  test.ipynb  test2.ipynb
(+15 files in other folders)
